--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,13 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.ttf
+*.obj
+*.log
+Debug/vc120.pdb
+*.xml
+Debug/ParticleProgram.tlog/cl.command.1.tlog
+*.tlog
+Debug/vc120.idb
+ParticleProgram.vcxproj
+*.filters
